# gizmo

./: .gitignore  example.env  pyproject.toml
scripts/: dispatch_bilibili_dynamic.py
src/gizmo/: lark.py
src/gizmo/bilibili/: __init__.py  bilibili.http  client.py  models.py
